# internal/controller/restapi/v1/error.go
@@ -1,8 +1,14 @@
 package v1
 
 import (
+	"errors"
+	"math"
+	"net/http"
+	"strconv"
+
 	"github.com/evrone/go-clean-template/internal/controller/restapi/apierror"
 	"github.com/evrone/go-clean-template/internal/controller/restapi/v1/response"
+	"github.com/evrone/go-clean-template/internal/entity"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -13,6 +19,26 @@ func errorResponse(ctx *fiber.Ctx, code int, msg string) error {
 		Message:   msg,
 		RequestID: requestID(ctx),
 	})
+}
+
+// rateLimitedResponse renders a 429 and, when the usecase reported a
+// retry-after hint, surfaces it via the Retry-After header and body field.
+func rateLimitedResponse(ctx *fiber.Ctx, err error, msg string) error {
+	var rateLimited *entity.AuthRateLimitedError
+	if errors.As(err, &rateLimited) && rateLimited.RetryAfter > 0 {
+		seconds := int64(math.Ceil(rateLimited.RetryAfter.Seconds()))
+		ctx.Set(fiber.HeaderRetryAfter, strconv.FormatInt(seconds, 10))
+
+		return ctx.Status(http.StatusTooManyRequests).JSON(response.Error{
+			Error:      msg,
+			Code:       apierror.Code(msg),
+			Message:    msg,
+			RetryAfter: seconds,
+			RequestID:  requestID(ctx),
+		})
+	}
+
+	return errorResponse(ctx, http.StatusTooManyRequests, msg)
 }
 
 func requestID(ctx *fiber.Ctx) string {
