# internal/controller/restapi/v1/response/error.go
@@ -4,11 +4,12 @@ import "github.com/evrone/go-clean-template/internal/entity"
 
 // Error -.
 type Error struct {
-	Error     string `json:"error" example:"message"`
-	Code      string `json:"code" example:"invalid_request_body"`
-	Message   string `json:"message" example:"message"`
-	Details   any    `json:"details,omitempty"`
-	RequestID string `json:"request_id,omitempty" example:"550e8400-e29b-41d4-a716-446655440000"`
+	Error      string `json:"error" example:"message"`
+	Code       string `json:"code" example:"invalid_request_body"`
+	Message    string `json:"message" example:"message"`
+	Details    any    `json:"details,omitempty"`
+	RetryAfter int64  `json:"retry_after,omitempty" example:"60"`
+	RequestID  string `json:"request_id,omitempty" example:"550e8400-e29b-41d4-a716-446655440000"`
 } // @name v1.Error
 
 type ProductionProjectConflict struct {
